# cookiecutter-data-analysis-lite-fast

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_post_gen_project.py  test_pre_gen_project.py
{{cookiecutter.project_slug}}/: Pipfile  README.md  _quarto.yml  index.qmd  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/utils/: notebook_setup.py
