[tool.poetry]
name = "cookiecutter_data_analysis_lite"
version = "0.1.0"
description = "A starter template for data analysis projects that offers a simplified and beginner-friendly structure"
authors = ["Fer Aguirre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
